--- a/allmight.html
+++ b/allmight.html
@@ -10,14 +10,14 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="Allmight.html">allmight</li></a>
+			<li><a href="index.html">Home</li></a>
 			<li><a href="hero.html">Deku</a></li>
 		</ul>
 	</nav>
 <h1 id="placeholder">The HEROES</h1>
-<p><h1>The <span style="text-transform: uppercase;">Hero</span></h1></p>
-<img id="allmight" src="https://res.cloudinary.com/teepublic/image/private/s--EzswvmbB--/c_crop,x_10,y_10/c_fit,h_1409/c_crop,g_north_west,h_1127,w_941,x_43,y_28/l_misc:transparent_1260/fl_layer_apply,g_north_west,x_-159,y_-66/c_mfit,g_north_east,u_misc:tapestry-p-l-gradient/e_displace,fl_layer_apply,x_0,y_20/l_upload:v1507037317:production:blanks:aoiqhtvurqhcr7eobhvh/fl_layer_apply,g_north_west,x_0,y_0/b_rgb:000000/c_limit,f_jpg,h_630,q_90,w_630/v1540400021/production/designs/3380643_0.jpg">
-<h1> To Go Beyond!!</h1>
+<p><h1>The <span style="text-transform: uppercase;">SYMBOL OF PEACE!!:</span></h1></p>
+<img id="allmight" src="https://imgix.ranker.com/user_node_img/50081/1001610579/original/started-down-this-path-photo-u1?w=650&q=50&fm=pjpg&fit=crop&crop=faces">
+<h1> A Hero Always Smiles!! </h1>
 
 <br />
 <button>
@@ -77,7 +77,5 @@ Real name: Toshinori Yagi/All Might
 		<td>season one</td>
 	</tr>
 </table>
-<div class="linkbox_wrapper">
-<img id="linkbox_img" src="https://boundingintocomics.com/files/2019/10/2019.10.24-07.54-boundingintocomics-5db2016f904b4.png">
 </body>
 </html>
